# confluence-dl

./: .clippy.toml  .dockerignore  .gitignore  .rustfmt.toml  AGENTS.md  CLAUDE.md  CLI_DESIGN.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  rust-toolchain.toml
.github/: pull_request_template.md  release-template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
confluence-export/: Getting started in Confluence from Jira.md
docs/: CLI_DESIGN.md  LIBRARY_REFACTORING_PLAN.md  PARSING_ARCHITECTURE.md  SMART_SYNC_PLAN.md  TOKIO_INTEGRATION_PLAN.md  V0.1.0_IMPLEMENTATION_PLAN.md
src/: attachments.rs  cli.rs  color.rs  confluence.rs  credentials.rs  export_summary.rs  format.rs  images.rs  lib.rs  main.rs  markdown.rs  processed_page.rs
src/asciidoc/: elements.rs  mod.rs  utils.rs
src/commands/: auth.rs  completions.rs  ls.rs  mod.rs  page.rs  tui.rs  version.rs
src/confluence/: api.rs  client.rs  mod.rs  models.rs  tree.rs  url.rs
src/credentials/: mod.rs  netrc.rs  provider.rs  types.rs
src/markdown/: elements.rs  emoji.rs  html_entities.rs  macros.rs  mod.rs  tables.rs  utils.rs
src/markdown/macros/: admonitions.rs  anchors.rs  basic.rs  code.rs  decisions.rs  emoji_macros.rs  excerpts.rs  expand.rs  jira.rs  mod.rs
tests/: e2e_tests.rs
tests/common/: fake_confluence.rs  fixtures.rs  mod.rs
tests/resources/: demo_raw_export.xml
tests/snapshots/: e2e_tests__convert_complex_page_with_code_to_markdown.snap  e2e_tests__convert_comprehensive_features_page_to_markdown.snap  e2e_tests__convert_demo_raw_export_to_markdown.snap  e2e_tests__convert_meeting_notes_overview_to_markdown.snap  e2e_tests__convert_meeting_notes_with_tasks_to_markdown.snap  e2e_tests__convert_page_with_column_layout_to_markdown.snap  e2e_tests__convert_page_with_internal_links_to_markdown.snap  e2e_tests__convert_page_with_jira_macro_to_markdown.snap  e2e_tests__end_to_end_page_fetch_and_convert.snap  e2e_tests__markdown_conversion_preserves_structure.snap
