[package]
name = "confluence-dl"
version = "0.5.0"
edition = "2024"
authors = ["Edward Jones <e@eddie.land>"]
description = "CLI for exporting Confluence spaces and pages to Markdown"
repository = "https://github.com/eddieland/confluence-dl"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5.51", features = ["derive", "env", "color"] }
clap_complete = "4.5.60"
futures = "0.3"
owo-colors = { version = "4.1", features = ["supports-colors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
roxmltree = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[dev-dependencies]
insta = "1.41"
tempfile = "3.23.0"

[lib]
name = "confluence_dl"
path = "src/lib.rs"

[[bin]]
name = "confluence-dl"
path = "src/main.rs"
test = false
