[package]
name = "confluence-dl"
version = "0.6.1"
edition = "2024"
authors = ["Edward Jones <e@eddie.land>"]
description = "CLI for exporting Confluence spaces and pages to Markdown"
repository = "https://github.com/eddieland/confluence-dl"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive", "env", "color"] }
clap_complete = "4.5.65"
futures = "0.3.31"
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
unicode-width = "0.2.2"
url = "2.5.8"

[dev-dependencies]
insta = "1.44.3"
tempfile = "3.23.0"

[lib]
name = "confluence_dl"
path = "src/lib.rs"

[[bin]]
name = "confluence-dl"
path = "src/main.rs"
test = false
